--- a/百思不得姐/百思不得姐/Info.plist
+++ b/百思不得姐/百思不得姐/Info.plist
@@ -44,5 +44,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请求打开相册</string>
 </dict>
 </plist>
